# py_pet_exercise

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  README.rst  pet.py  pyproject.toml  pytest.ini  test_pet.py
LICENSES/: Unlicense.txt
py_pet_exercise/: pet.py
tests/: __init__.py  conftest.py  test_pet.py
