[tool.poetry]
name = "pet"
version = "0.1.0"
description = "Representation of a Pet in Python"
authors = ["Tammy Cravit <tammy.cravit@azblue.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
black = "^22.1.0"
pytest-cov = "^3.0.0"

[tool.black]
target-version=['py38']
line-length=88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
