# SPDX-FileCopyrightText: 2022 Tammy Cravit <tammymakesthings.com>
#
# SPDX-License-Identifier: Unlicense

[project]
name = "python_pet_exercise"
version = "0.0.0-auto.0"
description = "Representation of a Pet in Python"
authors = [
    { name = "Tammy Cravit", email = "tammy@tammymakesthings.com" }
]
maintainers = [
    { name = "Tammy Cravit", email = "tammy@tammymakesthings.com" }
]
readme = "README.md"
keywords = [ "programming exercises", "object model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
license = { text = "Unlicense" }
requires-python = ">= 3.8"

dependencies = [
    "pytest >= ^7.0.1",
    "pylint >= 2.12.2",
    "black >= 22.1.0",
    "pytest-cov >= 3.0.0",
    "pre-commit >= 2.17.0",
    "pydantic>=1.9.0",
]

[tool.black]
target-version=['py38']
line-length=88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -q --cov=python_pet_exercise"
testpaths = [
    'tests',
]

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
